5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1795_3139.log
== SUBMITION (2019-05-30 16:13:11) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	M = tg/size(v)
	
	i += 1
	
print(round(M,2))
-- EXECUTION TIME:
1.09891
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
0.28
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
0.28
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
0.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:12) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	M = tg/size(v)
	
	i += 1
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:13:14) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	M = tg/size(v)
	
	i += 1
	
print(round(M,2))
-- EXECUTION TIME:
1.7704
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
0.28
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
0.28
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
0.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:13:15) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	M = tg/size(v)
	
	i += 1
	
print(round(M,2))
-- EXECUTION TIME:
2.55196
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
0.28
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
vetor contendo numeros reais positivos: 0.31
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
vetor contendo numeros reais positivos: 0.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:27) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	tg += 0
	
	i += 1
	
M = x/size(v)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:14:29) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	tg += 0
	
	i += 1
	
M = x/size(v)

print(round(M,2))
-- EXECUTION TIME:
1.18132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 15, in <module>
    M = x/size(v)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:05) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	x = tg
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:07) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:10) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:11) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.09693
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
vetor contendo numeros reais positivos: 2.85
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:20) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:21) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.37101
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
4.6
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
3.49
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:22) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.79694
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
vetor contendo numeros reais positivos: 2.85
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:23) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.24038
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
vetor contendo numeros reais positivos: 2.85
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:27) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:28) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:32) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.59975
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
vetor contendo numeros reais positivos: 3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
vetor contendo numeros reais positivos: 2.85
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:35) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:56) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.982538
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
4.6
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:58) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.4225
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:58) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.18749
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:59) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.30327
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
2.85
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
4.6
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:00) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.24513
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:03) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.25799
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
2.85
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:04) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.10095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:06) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.35954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:09) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.64591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:11) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.98121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:21) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.740902
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:26) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.59706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:28) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.2428
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:28) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:28) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.56767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:29) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.28716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:32) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.69267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:37) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.69779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(eval(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:39) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
4.66998
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:40) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
4.51463
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
3.49
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
2.85
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:41) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
4.71953
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:41) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.05768
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:46) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.21854
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:49) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.3234
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:50) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.44401
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:51) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.03632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:51) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
4.08282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:55) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.11321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:57) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.01565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:19:58) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.68678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:00) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
3.01585
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:00) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:01) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.26182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:02) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
2.85027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 10, in <module>
    tg += (v[i]**(1/3))
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:05) 
-- CODE:
from numpy import *

v = array((input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.210746
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1795/3139/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:18) 
-- CODE:
from numpy import *

v = array(float(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.964888
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3139/main.py", line 3, in <module>
    v = array(float(input("vetor contendo numeros reais positivos: ")))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:30) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.872014
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:51) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
1.00949
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:56) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.839287
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:02) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0

while i < size(v):
	
	tg = (v[i]**(1/3))
	
	M = tg/size(v)
	
print(round(M,2))
-- EXECUTION TIME:
484.205
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:10) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.593681
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:10) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.987904
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:24) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	
	tg += (v[i]**(1/3))
	
	x = tg 
	
	i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.499746
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:06) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(g[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:12) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(g[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:26) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(v[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:32) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(v[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.393889
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:36) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(v[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.578079
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:38) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(v[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.516328
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:42) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(v[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:44) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(v[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.364538
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:00) 
-- CODE:
from numpy import *

v = array(eval(input("vetor contendo numeros reais positivos: ")))

i = 0
tg = 0

while i < size(v):
	if dtype(v[i]) == float:
		tg += (v[i]**(1/3))
		
		x = tg 
		
		i += 1
	
M = (x/size(v))**3

print(round(M,2))
-- EXECUTION TIME:
0.400564
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
